force-app/main/default/objects/Deming__c/Deming__c.object-meta.xml
<CustomObject>
    <label>CADD Management</label>
    <nameField>
        <displayFormat>CADD-{0000}</displayFormat>
        <label>CADD Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CADD Management</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>