force-app/main/default/objects/Deming__c/fields/Acceptance_Time__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Time__c</fullName>
    <label>Customer Contact Date</label>
    <type>Date</type>
</CustomField>