force-app/main/default/objects/Deming__c/fields/AccountCoordinatorUserId__c.field-meta.xml
<CustomField>
    <fullName>AccountCoordinatorUserId__c</fullName>
    <label>AccountCoordinatorUserId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>