force-app/main/default/objects/Deming__c/fields/CADD_Owner__c.field-meta.xml
<CustomField>
    <fullName>CADD_Owner__c</fullName>
    <label>TO Email ID</label>
    <type>Email</type>
</CustomField>