force-app/main/default/objects/Deming__c/fields/Cadd_Status__c.field-meta.xml
<CustomField>
    <fullName>Cadd_Status__c</fullName>
    <defaultValue>&quot;Open&quot;</defaultValue>
    <label>Customer Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>