force-app/main/default/objects/Deming__c/fields/CDP_Global_Id__c.field-meta.xml
<CustomField>
    <fullName>CDP_Global_Id__c</fullName>
    <label>CDP Global Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>