force-app/main/default/objects/Deming__c/fields/CDP_Name__c.field-meta.xml
<CustomField>
    <fullName>CDP_Name__c</fullName>
    <description>Customer Delivery Person Name</description>
    <label>CDP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>