force-app/main/default/objects/Deming__c/fields/Customer_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Acceptance_Date__c</fullName>
    <label>Customer Accepted  Delivery Date</label>
    <type>Date</type>
</CustomField>