force-app/main/default/objects/Deming__c/fields/Customer_Delivery_Partner_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Delivery_Partner_Email__c</fullName>
    <description>This Field will be used in the workflow for sending notification</description>
    <label>Account Owner Email ID</label>
    <type>Email</type>
</CustomField>