force-app/main/default/objects/Deming__c/fields/Customer_Industry__c.field-meta.xml
<CustomField>
    <fullName>Customer_Industry__c</fullName>
    <description>Customer Industry Type</description>
    <label>Customer Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>