force-app/main/default/objects/Deming__c/fields/Customer_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_No__c</fullName>
    <description>Customer MCN Number</description>
    <label>MCN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>