force-app/main/default/objects/Deming__c/fields/EditShareWithUser__c.field-meta.xml
<CustomField>
    <fullName>EditShareWithUser__c</fullName>
    <label>EditShareWithUser</label>
    <length>18</length>
    <type>Text</type>
</CustomField>