force-app/main/default/objects/Deming__c/fields/EditShareWithUserSpFound__c.field-meta.xml
<CustomField>
    <fullName>EditShareWithUserSpFound__c</fullName>
    <label>EditShareWithUserSpFound</label>
    <length>18</length>
    <type>Text</type>
</CustomField>