force-app/main/default/objects/Deming__c/fields/fua_site_name__c.field-meta.xml
<CustomField>
    <fullName>fua_site_name__c</fullName>
    <label>FUA Site Name</label>
    <length>360</length>
    <type>LongTextArea</type>
</CustomField>