force-app/main/default/objects/Deming__c/fields/fua_site_nbr__c.field-meta.xml
<CustomField>
    <fullName>fua_site_nbr__c</fullName>
    <label>FUA Site Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>