force-app/main/default/objects/Deming__c/fields/Include_In_Process__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include In Process</label>
    <type>Checkbox</type>
</CustomField>