force-app/main/default/objects/Deming__c/fields/Is_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Is_Account_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Account Owner Found</label>
    <type>Checkbox</type>
</CustomField>