force-app/main/default/objects/Deming__c/fields/isAccountManagerActive__c.field-meta.xml
<CustomField>
    <fullName>isAccountManagerActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAccountManagerActive</label>
    <type>Checkbox</type>
</CustomField>