force-app/main/default/objects/Deming__c/fields/isCustomerContacted__c.field-meta.xml
<CustomField>
    <fullName>isCustomerContacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCustomerContacted</label>
    <type>Checkbox</type>
</CustomField>