force-app/main/default/objects/Deming__c/fields/isPDPreponded__c.field-meta.xml
<CustomField>
    <fullName>isPDPreponded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPDPreponded</label>
    <type>Checkbox</type>
</CustomField>