force-app/main/default/objects/Deming__c/fields/IsSalespersonFound__c.field-meta.xml
<CustomField>
    <fullName>IsSalespersonFound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSalespersonFound</label>
    <type>Checkbox</type>
</CustomField>