force-app/main/default/objects/Deming__c/fields/Max_Promise_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Promise_Date__c</fullName>
    <label>Arrival Date</label>
    <type>Date</type>
</CustomField>