force-app/main/default/objects/Deming__c/fields/Max_Scheduled_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Scheduled_Arrival_Date__c</fullName>
    <description>Max Scheduled Arrival Date</description>
    <label>Max Scheduled Arrival Date</label>
    <type>Date</type>
</CustomField>