force-app/main/default/objects/Deming__c/fields/Ncr_Associate__c.field-meta.xml
<CustomField>
    <fullName>Ncr_Associate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCR Associate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Demings</relationshipName>
    <type>Lookup</type>
</CustomField>