force-app/main/default/objects/Deming__c/fields/Neither_SP_nor_AM_found__c.field-meta.xml
<CustomField>
    <fullName>Neither_SP_nor_AM_found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CSM Found</label>
    <type>Checkbox</type>
</CustomField>