force-app/main/default/objects/Deming__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>CADD Management</relationshipLabel>
    <relationshipName>CADD_Management</relationshipName>
    <type>Lookup</type>
</CustomField>