force-app/main/default/objects/Deming__c/fields/Order_Nbr_with_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Order_Nbr_with_Country_Code__c</fullName>
    <formula>IF(  Customer_Country_code__c == null , Order_number__c , Order_number__c  + Customer_Country_code__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Nbr with Country Code</label>
    <type>Text</type>
</CustomField>