force-app/main/default/objects/Deming__c/fields/Order_Nbr_with_Country_CodeExtrnal__c.field-meta.xml
<CustomField>
    <fullName>Order_Nbr_with_Country_CodeExtrnal__c</fullName>
    <externalId>true</externalId>
    <label>Order Nbr with Country CodeExtrnal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>