force-app/main/default/objects/Deming__c/fields/Order_Number_Link__c.field-meta.xml
<CustomField>
    <fullName>Order_Number_Link__c</fullName>
    <formula>IF(NOT(ISBLANK(Related_Order__c)),HYPERLINK(&quot;/&quot; &amp; Related_Order__c, Order_number__c, &quot;_blank&quot;), Order_number__c)</formula>
    <label>Order Number</label>
    <type>Text</type>
</CustomField>