force-app/main/default/objects/Deming__c/fields/Party_No__c.field-meta.xml
<CustomField>
    <fullName>Party_No__c</fullName>
    <description>Unique address for ship to address</description>
    <label>Party No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>