force-app/main/default/objects/Deming__c/fields/RDD__c.field-meta.xml
<CustomField>
    <fullName>RDD__c</fullName>
    <description>Requested Delivery date</description>
    <label>Requested Delivery Date</label>
    <type>Date</type>
</CustomField>