force-app/main/default/objects/Deming__c/fields/ReadShareWithUser__c.field-meta.xml
<CustomField>
    <fullName>ReadShareWithUser__c</fullName>
    <label>ReadShareWithUser</label>
    <length>18</length>
    <type>Text</type>
</CustomField>