force-app/main/default/objects/Deming__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <label>Reason Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>