force-app/main/default/objects/Deming__c/fields/Reason_Of_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_Of_Rejection__c</fullName>
    <label>Rejection Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Distressed Stores</fullName>
            </value>
            <value>
                <fullName>Grand Opening</fullName>
            </value>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>High Impact Store</fullName>
            </value>
            <value>
                <fullName>Tech Refresh for Compliance</fullName>
            </value>
            <value>
                <fullName>Tech Refresh</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>