force-app/main/default/objects/Deming__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>text(RelatedAccount__r.Account_Region__c)</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>