force-app/main/default/objects/Deming__c/fields/RelatedAccount__c.field-meta.xml
<CustomField>
    <fullName>RelatedAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CADD Management</relationshipLabel>
    <relationshipName>CADD_Management</relationshipName>
    <type>Lookup</type>
</CustomField>