force-app/main/default/objects/Deming__c/fields/SalesPerson_Global_Id__c.field-meta.xml
<CustomField>
    <fullName>SalesPerson_Global_Id__c</fullName>
    <description>Sales Person Gobal Id</description>
    <label>Salesperson Global Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>