force-app/main/default/objects/Deming__c/fields/ship_to_site_name__c.field-meta.xml
<CustomField>
    <fullName>ship_to_site_name__c</fullName>
    <label>Ship To Site Name</label>
    <length>360</length>
    <type>LongTextArea</type>
</CustomField>