force-app/main/default/objects/Deming__c/fields/ship_to_site_nbr__c.field-meta.xml
<CustomField>
    <fullName>ship_to_site_nbr__c</fullName>
    <label>Ship To Site Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>