force-app/main/default/objects/Deming__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <description>FUA Site Name</description>
    <label>Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>