force-app/main/default/objects/Deming__c/recordTypes/DemingRecordtype.recordType-meta.xml
<RecordType>
    <fullName>DemingRecordtype</fullName>
    <active>true</active>
    <label>Deming Recordtype</label>
</RecordType>